--- a/RomRenamer/build.gradle
+++ b/RomRenamer/build.gradle
@@ -13,5 +13,11 @@
  *
  */
 
-rootProject.name = 'RandomThings'
-include 'RomRenamer'
+dependencies {
+    compile "net.daporkchop.lib:binary:0.4.0-SNAPSHOT"
+    compile "net.daporkchop.lib:nds:0.3.0-SNAPSHOT"
+
+    compile "com.madgag:animated-gif-lib:1.5-SNAPSHOT"
+
+    compile "com.google.code.gson:gson:2.8.5"
+}
