--- a/JourneymapToMapcrafter/build.gradle
+++ b/JourneymapToMapcrafter/build.gradle
@@ -18,4 +18,6 @@ dependencies {
     compile "net.daporkchop.lib:logging:$porklibVersion"
 
     compile "io.netty:netty-buffer:$nettyVersion"
+
+    //compile "org.apache.commons:commons-imaging:1.0-alpha1"
 }
